Project

General

Profile

Actions

Bug #39340

closed

pool_stat.dump() - value of num_store_stats is wrong

Added by xie xingguo about 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (0 open1 closed)

Copied to Ceph - Backport #39412: nautilus: pool_stat.dump() - value of num_store_stats is wrongResolvedNathan CutlerActions
Actions #1

Updated by Kefu Chai about 5 years ago

  • Status changed from New to Resolved
Actions #2

Updated by xie xingguo about 5 years ago

  • Status changed from Resolved to Pending Backport
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #39412: nautilus: pool_stat.dump() - value of num_store_stats is wrong added
Actions #4

Updated by Nathan Cutler over 4 years ago

  • Pull request ID set to 27633
Actions #5

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved".

Actions

Also available in: Atom PDF