osd/osd_types: pool_stat_t::dump - fix 'num_store_stats' field

Fixes: http://tracker.ceph.com/issues/39340
Signed-off-by: xie xingguo <xie.xingguo@zte.com.cn>